Updated the Jumbotron img and fixed the Collapse bug on Navbar

--- a/css/main.css
+++ b/css/main.css
@@ -50,9 +50,9 @@ body::-webkit-scrollbar-thumb {
 .jumbotron{
   color:#fff;
 
-  height:300px;
+  min-height:300px;
 
-  background-image: url('img/jumbo-bg.jpeg');
+  background-image: url('../img/jumbo-bg.jpeg');
   background-position: center;
   background: cover;
 
